objects/Study__c.object
<CustomObject>
    <fields>
        <fullName>Any_External_Email__c</fullName>
        <formula>OR(
NOT(ISBLANK( External_Alert_Email_1__c)),
NOT(ISBLANK( External_Alert_Email_2__c)),
NOT(ISBLANK( External_Alert_Email_3__c)),
NOT(ISBLANK( External_Alert_Email_4__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Box is checked if any external alert email field is filled. Hidden field used to determine whether to bypass process Match: External PTC Emails</inlineHelpText>
        <label>Any External Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_IOE_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this trial will not generate automatic IOE&apos;s.</inlineHelpText>
        <label>Auto-IOE Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Trial_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Trial ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_1__c</fullName>
        <description>ENT-3521</description>
        <inlineHelpText>External Email Address at Pharma Company to receive Email Alerts</inlineHelpText>
        <label>External Alert Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_2__c</fullName>
        <label>External Alert Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_3__c</fullName>
        <description>ENT-3521</description>
        <label>External Alert Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NCT_Identifier__c</fullName>
        <description>NS:06/12/18 Example:&quot;NCT02428712&quot;</description>
        <label>NCT Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCT_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://clinicaltrials.gov/show/&quot;  &amp; NCT_Identifier__c , &quot;https://clinicaltrials.gov/show/&quot; &amp; NCT_Identifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCT Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pharma Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Studies1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PtC_Contact_List__c</fullName>
        <label>PtC Contact List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referral_Letter_Template__c</fullName>
        <label>Referral Letter Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Study_Folder_Link__c</fullName>
        <formula>&quot;link&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Folder Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Title__c</fullName>
        <description>NS:06/12/18. Example:&quot;A Study of PLX8394 as a Single Agent in Patients With Advanced Unresectable Solid Tumors&quot;</description>
        <label>Study Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Code__c</fullName>
        <label>Trial Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Eligibility_Criteria__c</fullName>
        <label>Trial Eligibility Criteria</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Trial_Sites_List__c</fullName>
        <label>Trial Sites List</label>
        <type>Url</type>
    </fields>
    <label>Trial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pharma_Company__c</columns>
        <columns>Case_Safe_Trial_ID__c</columns>
        <columns>Trial_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Trial_Sites_List__c</columns>
        <columns>Trial_Eligibility_Criteria__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Match_Queue_Study</fullName>
        <filterScope>Queue</filterScope>
        <label>Match Queue</label>
        <queue>Match_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>